# clawmodeler

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE-NOTICE.md  README.md  package.json  pyproject.toml
.github/workflows/: ci.yml  macos-arm-dmg-smoke.yml  release.yml
clawmodeler_engine/: bridge_execution.py  bridge_prepare.py  bridge_validation.py  charts.py  chat.py  cli.py  contracts.py  diff.py  docx.py  dtalite_bridge.py  maps.py  matsim_bridge.py  model.py  orchestration.py  pdf.py  portfolio.py  project.py  qa.py  readiness.py  report.py  routing.py  sumo_bridge.py  tbest_bridge.py  urbansim_bridge.py  what_if.py  workflow.py  workspace.py
clawmodeler_engine/llm/: __init__.py  anthropic.py  config.py  grounding.py  narrative.py  ollama.py  openai.py  provider.py
desktop/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
desktop/src-tauri/: Cargo.toml  (+1 more)
docs/: cli.md  macos-arm-gui-gate.md  narrative.md  release.md  roadmap.md  stack.md  tutorial.md
requirements/: clawmodeler-requirements-standard.txt
scripts/: README.md  build-sidecar-binary.sh  check-desktop-acceptance.sh  check-first-user-smoke.mjs  check-macos-dmg-smoke.mjs  check-packaging.sh  check-release-assets.mjs  check-release-dry-run.mjs  check-release-sidecar.mjs  check-release-workflows.mjs  check-version-consistency.mjs  collect-weasyprint-runtime.py  install-profile.sh  release-latest-policy.mjs
tests/: clawmodeler_engine_test.py  test_ai_narrative.py  test_atp_packet.py  test_ceqa_vmt.py  test_chat.py  test_docx.py  test_equity_lens.py  test_grounding.py  test_lapm_exhibit.py  test_llm_byok.py  test_llm_config.py  test_llm_provider.py  test_pdf.py  test_planner_pack_cmaq.py  test_planner_pack_hsip.py  test_planner_pack_stip.py  test_planner_pack_utilities.py  test_portfolio.py  test_public_fixture_workflow.py  test_qa_gate_planner_pack.py  test_rtp_chapter.py  test_run_diff.py  test_what_if.py
(+49 files in other folders)
