[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawmodeler-engine"
version = "0.9.2"
description = "ClawModeler transportation modeling engine."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Nathaniel Ford Redmond" }]
dependencies = ["jinja2>=3.1"]

[project.urls]
Homepage = "https://github.com/nfredmond/clawmodeler"
Repository = "https://github.com/nfredmond/clawmodeler"
Issues = "https://github.com/nfredmond/clawmodeler/issues"
Changelog = "https://github.com/nfredmond/clawmodeler/blob/main/CHANGELOG.md"

[project.optional-dependencies]
light = []
visuals = ["matplotlib>=3.8", "folium>=0.15"]
llm = ["httpx>=0.27"]
llm-cloud = ["anthropic>=0.34", "openai>=1.50"]
pdf = ["markdown-it-py>=3.0", "weasyprint>=62"]
standard = ["duckdb", "pandas", "shapely", "pyproj", "networkx", "osmnx"]
full = ["duckdb", "pandas", "shapely", "pyproj", "networkx", "osmnx", "ortools", "scikit-learn"]
gpu = ["torch", "xgboost"]

[project.scripts]
clawmodeler-engine = "clawmodeler_engine.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["clawmodeler_engine*"]
exclude = [
  "apps*",
  "assets*",
  "dist*",
  "docs*",
  "extensions*",
  "packages*",
  "scripts*",
  "skills*",
  "src*",
  "test*",
  "ui*",
  "vendor*",
  "sumo*",
  "matsim-libs*",
  "urbansim*",
  "DTALite*",
  "tbest-tools*",
]

[tool.setuptools.package-data]
clawmodeler_engine = [
  "toolbox.default.json",
  "templates/*.j2",
  "templates/planner_pack/*.j2",
]

[tool.setuptools]
include-package-data = false

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E9", "F63", "F7", "F82", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
